syntax = "proto3";
package types;

option go_package = "github.com/ginchuco/ginchu/p2p";
import "peer.proto";
import "google/protobuf/any.proto";


message Envelope {
  google.protobuf.Any payload = 1;
}

message Packet{
  Topic stream_id = 1;
  bool eof = 2;
  bytes bytes = 3;
}

message Ping {}

message Pong {}

message PeerBookRequestMessage{}

message PeerBookResponseMessage{
  repeated BookPeer book = 1;
}

message BookPeer {
  PeerAddress Address = 1;
  int32 consecutive_failed_dial = 2;
}